--- a/project-1/urban-octo-telegram/Develop/assets/css/style.css
+++ b/project-1/urban-octo-telegram/Develop/assets/css/style.css
@@ -1,29 +1,30 @@
+/* sets the universal properties of the page at 0 padding and 0 margin as well as puts everything in border-box */
 * {
     box-sizing: border-box;
     padding: 0;
     margin: 0;
 }
-
+/* sets the background color for the page/body */
 body {
     background-color: #d9dcd6;
 }
- 
+ /* sets the padding at 20px changes the font type, sets the font color to white, sets background to blue */
 .header {
     padding: 20px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     background-color: #2a607c;
     color: #ffffff;
 }
-
+/* changes the font size to 48px */
 .header h1 {
     display: inline-block;
     font-size: 48px;
 }
-
+/* sets the color of the seo to a different white */
 .header h1 .seo {
     color: #d9dcd6;
 }
-
+/* puts padding on the top of 15px and 20px on the right, everthing goes right, sets font type and size */
 .header div {
     padding-top: 15px;
     margin-right: 20px;
@@ -31,25 +32,25 @@ body {
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-size: 20px;
 }
-
+ /* gets rid of any type of list add ons */
 .header div ul {
     list-style-type: none;
 }
-
+/* sets the attribute 25px from the left margin */
 .header div ul li {
     display: inline-block;
     margin-left: 25px;
 }
-
+/* sets the colors for a attributes as well as gets rid of text decorations*/
 a {
     color: #ffffff;
     text-decoration: none;
 }
-
+/* sets font size for p attributes */
 p {
     font-size: 16px;
 }
-
+/* sets the height to 800px width to whole page, up 25px from the bottom, sets the background image, as well as centers the background */
 .hero {
     height: 800px;
     width: 100%;
@@ -58,23 +59,23 @@ p {
     background-size: cover;
     background-position: center;
 }
-
+/* sets everything to start on the left */
 .float-left {
     float: left;
     margin-right: 25px;
 }
-
+/* sets everything to start on the right */
 .float-right {
     float: right;
     margin-left: 25px;
 }
-
+/* sets the width to 75% of the screen and puts it 20px to the right of the left side */
 .content {
     width: 75%;
     display: inline-block;
     margin-left: 20px;
 }
-
+/* puts the attributes 20 px left of the right margin, adds 20px of padding, everything starts from the right, takes up 1/5th of the width, and the total height, sets the font type, changes background to blue */
 .benefits {
     margin-right: 20px;
     padding: 20px;
@@ -85,21 +86,21 @@ p {
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     background-color: #2589bd;
 }
-
+/* this ensures that there is a gap below each item as well as sets the color to white */
 .benefit-lead,
 .benefit-brand,
 .benefit-cost {
     margin-bottom: 32px;
     color: #ffffff;
 }
-
+/* this creates a margin around the heading and aligns them in the center */
 .benefit-lead h3,
 .benefit-brand h3,
 .benefit-cost h3 {
     margin-bottom: 10px;
     text-align: center;
 }
-
+/* this makes a margin on the images and maxes out the width */
 .benefit-lead img,
 .benefit-brand img,
 .benefit-cost img {
@@ -107,7 +108,7 @@ p {
     margin: 10px auto;
     max-width: 150px;
 }
-
+/* this sets a margin for each item as well as padding and height variable, chooses a font, blue background, and white text */
 .search-engine-optimization,
 .online-reputation-management,
 .social-media-marketing {
@@ -118,27 +119,27 @@ p {
     background-color: #0072bb;
     color: #ffffff;
 }
-
+/* sets max height for images */
 .search-engine-optimization img,
 .online-reputation-management img,
 .social-media-marketing img {
     max-height: 200px;
 }
-
+/* sets the font size for headings as well as a gap below each */
 .search-engine-optimization h2,
 .online-reputation-management h2,
 .social-media-marketing h2 {
     margin-bottom: 20px;
     font-size: 36px;
 }
-
+/* sets padding, aligns the text in the center, changes font type */
 .footer {
     padding: 30px;
     clear: both;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     text-align: center;
 }
-
+/* sets the font size for the footers heading */
 .footer h2 {
     font-size: 20px;
 }
